.dev/logs/state-node.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
   Compiling monas-state-node v0.1.0 (/Users/yu-da1/Desktop/myCode/monas/monas-state-node)
error[E0609]: no field `node_timestamp` on type `Operation<CidGeneric<64>, ContentPayload>`
   --> monas-state-node/src/infrastructure/crdt_repository.rs:354:16
    |
354 |             op.node_timestamp = Some(serialized_op.node_timestamp);
    |                ^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `id`, `genesis`, `kind`, `timestamp`, `author`, `parents`

For more information about this error, try `rustc --explain E0609`.
error: could not compile `monas-state-node` (lib) due to 1 previous error
